# LumosAlgo

./: .gitmodules  CMakeLists.txt  math_interface.h  opencv_build_command  prompts.md  run_tests.sh  test_axis_angle_euler.cpp
applications/image/: CMakeLists.txt  main.cpp
applications/simple/: main.cpp
old_plotting_math/: lin_alg.h  math.h
old_plotting_math/geometry/: line_3d.h  plane.h
old_plotting_math/geometry/class_def/: line_2d.h  plane.h
old_plotting_math/image/: image_gray_alpha.h  image_rgb.h
old_plotting_math/lin_alg/matrix_dynamic/: matrix_math_functions.h
old_plotting_math/lin_alg/matrix_dynamic/class_def/: matrix_dynamic.h
old_plotting_math/lin_alg/matrix_fixed/: matrix_fixed.h
old_plotting_math/lin_alg/vector_dynamic/class_def/: vector_dynamic.h
old_plotting_math/lin_alg/vector_low_dim/: vec3.h
old_plotting_math/lin_alg/vector_low_dim/class_def/: vec2.h  vec4.h
old_plotting_math/misc/: forward_decl.h
old_plotting_math/structures/: index_triplet.h
old_plotting_math/transformations/class_def/: axis_angle.h
src/: logging.h
src/applications/image/: main.cpp
src/applications/simple/: main.cpp
src/argparse/: argparse.h  example.cpp
src/argparse/test/: CMakeLists.txt  README.md  argparse_gtest.cpp  argparse_test.cpp
src/binary_io/: binary_io.h  binary_io.impl.h
src/binary_io/test/: binary_io_test.cpp
src/csv/: csv.impl.h
src/csv/test/: csv_test.cpp
src/json/: json.h  json.impl.h
src/json/test/: CMakeLists.txt  json_test.cpp
src/logging/: logging.h
src/logging/test/: logging_test.cpp
src/lumos/: argparse.h  binary_io.h  csv.h  json.h  logging.h  lumos  math.h  string.h  test_reader.h  vo.h
src/lumos/argparse/: example.cpp
src/lumos/argparse/test/: CMakeLists.txt  argparse_gtest.cpp  argparse_test.cpp
src/lumos/binary_io/: binary_io.h  binary_io.impl.h
src/lumos/binary_io/test/: CMakeLists.txt  binary_io_test.cpp
src/lumos/csv/: csv.h  csv.impl.h
src/lumos/csv/test/: CMakeLists.txt  csv_test.cpp
src/lumos/json/: json.impl.h
src/lumos/json/test/: json_test.cpp
src/lumos/json/test/data/: test_file.json
src/lumos/logging/: logging.h
src/lumos/logging/test/: logging_test.cpp
src/lumos/math/: lin_alg.h  math.h  pre_defs.h
src/lumos/math/curves/: README.md  bezier_curve.h  bspline_curve.h  curves.h  quintic_polynomial.h
src/lumos/math/curves/class_def/: bezier_curve.h  bspline_curve.h  quintic_polynomial.h
src/lumos/math/curves/test/: CMakeLists.txt  README.md  curves_test.cpp
src/lumos/math/fft/: example.cpp  fft.impl.h
src/lumos/math/fft/test/: fft_test.cpp
src/lumos/math/filters/: README.md  filters.h  fir_filter.h  iir_filter.h
src/lumos/math/filters/class_def/: fir_filter.h  iir_filter.h
src/lumos/math/filters/test/: filters_test.cpp
src/lumos/math/geometry/: line_2d.h  line_3d.h  plane.h  triangle.h
src/lumos/math/geometry/class_def/: line_2d.h  line_3d.h  plane.h  triangle.h
src/lumos/math/geometry/test/: README.md  geometry_test.cpp
src/lumos/math/image/: image_gray.h  image_gray_alpha.h  image_rgb.h  image_rgba.h
src/lumos/math/lin_alg/: matrix_vector_dynamic.h  matrix_vector_fixed.h
src/lumos/math/lin_alg/fixed_size_vector/: fixed_size_vector.h
src/lumos/math/misc/: forward_decl.h  math_macros.h
src/lumos/math/structures/: index_triplet.h
src/lumos/math/transformations/: axis_angle.h  euler_angles.h  quaternion.h
src/lumos/plotting/: communication_header.h  communication_header_object.h  constants.h  control_functions.h  duoplot.h  encode_decode_functions.h  encode_decode_functions_defs.h  enumerations.h  fillable_uint8_array.h  gui_api.h  gui_internal.h  internal.h  item_id.h  logging.h  logging.h.backup  plot_functions.h  plot_properties.h  property_set.h  timing.h  utils.h
src/lumos/plotting/math/: pre_defs.h
src/lumos/plotting/test/: CMakeLists.txt  plotting_test.cpp
src/lumos/string/: string.h  string.impl.h
src/lumos/string/test/: string_test.cpp
src/lumos/test_reader/: CMakeLists.txt  test_example.cpp  text_reader.impl.h
src/lumos/vo/: camera.h  distortion.h  vo.h
src/math/: CMakeLists.txt  lin_alg.h  math.h  pre_defs.h
src/math/curves/: README.md  bezier_curve.h  bspline_curve.h  curves.h  quintic_polynomial.h
src/math/curves/class_def/: bezier_curve.h  bspline_curve.h  quintic_polynomial.h
src/math/curves/test/: curves_test.cpp
src/math/fft/: example.cpp  fft.h  fft.impl.h
src/math/fft/test/: CMakeLists.txt  fft_test.cpp
src/math/filters/: README.md  filters.h  fir_filter.h  iir_filter.h
src/math/filters/class_def/: fir_filter.h  iir_filter.h
src/math/filters/test/: CMakeLists.txt  README.md  filters_test.cpp
src/math/geometry/: line_2d.h  line_3d.h  plane.h  triangle.h
src/math/geometry/class_def/: line_2d.h  line_3d.h  plane.h  triangle.h
src/math/geometry/test/: CMakeLists.txt  geometry_test.cpp
src/math/image/: image_gray.h  image_gray_alpha.h  image_rgb.h  image_rgba.h
src/math/lin_alg/: matrix_vector_dynamic.h  matrix_vector_fixed.h
src/math/lin_alg/fixed_size_vector/: fixed_size_vector.h
src/math/lin_alg/fixed_size_vector/test/: CMakeLists.txt  fixed_size_vector_test.cpp
src/math/lin_alg/matrix_dynamic/: matrix_dynamic.h  matrix_math_functions.h
src/math/lin_alg/matrix_dynamic/test/: CMakeLists.txt  matrix_dynamic_test.cpp  matrix_slicing_test.cpp
src/math/lin_alg/matrix_fixed/: matrix_fixed.h
src/math/lin_alg/matrix_fixed/test/: CMakeLists.txt  README.md  matrix_fixed_test.cpp  qr_decomposition_test.cpp
src/math/lin_alg/vector_dynamic/: vector_dynamic.h  vector_math_functions.h
src/math/lin_alg/vector_low_dim/: vec2.h  vec3.h  vec4.h
src/math/misc/: forward_decl.h  math_macros.h
src/math/transformations/: axis_angle.h  euler_angles.h  quaternion.cpp  quaternion.h
src/math/transformations/class_def/: axis_angle.h  euler_angles.h  quaternion.h
src/string/: string.h  string.impl.h
src/string/test/: CMakeLists.txt  string_test.cpp
src/test_reader/: sample.txt  test_example.cpp  text_reader.h  text_reader.impl.h
src/vo/: camera.h  distortion.h  vo.h
(+63 files in other folders)
